# cpp_sitter

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.cache/clangd/index/: ASTAnalyzer.cpp.1B08A438E8DA4F46.idx  ASTAnalyzer.hpp.B5B4EC4D4C115121.idx  ASTAnalyzer_test.cpp.6A7D62A71A7C19DE.idx  EndToEnd_test.cpp.4CC65B5173E7F9DA.idx  ExecuteQueryTool.cpp.3CC18FC63F47E9AE.idx  ExecuteQueryTool.hpp.DC4DCBDCBEBC23FA.idx  FindClassesTool.cpp.C9F6712E5F18B42D.idx  FindClassesTool.hpp.DDBB7CCD21A05BD3.idx  FindFunctionsTool.cpp.9173B77F0121910D.idx  FindFunctionsTool.hpp.DB4BB4D8FBDC8524.idx  ITransport.hpp.502EA96441DB9F99.idx  MCPServer.cpp.463834198B21E2C2.idx  MCPServer.hpp.EB611AFC8ECE8BD4.idx  MCPServer_test.cpp.A7C2A3D69EFC393F.idx  MockTransport.cpp.328BBD001E511D01.idx  MockTransport.hpp.188E587711F452A2.idx  ParseFileTool.cpp.F18CD0C97FBB9221.idx  ParseFileTool.hpp.EEDAC250C139259A.idx  QueryEngine.cpp.723CB0FD641D54B9.idx  QueryEngine.hpp.6533613409E90A85.idx  QueryEngine_test.cpp.10ABCAF884AA125D.idx  StdioTransport.cpp.B2AC4A13C53F6D33.idx  StdioTransport.hpp.FE415023B8C9121B.idx  Tools_test.cpp.04F8C5FDDD779146.idx  TreeSitterParser.cpp.BD6B40F63D2ABDEA.idx  TreeSitterParser.hpp.72E845F32A456942.idx  TreeSitterParser_test.cpp.2D63BA36142542BD.idx  main_stdio.cpp.582D3D54E190C553.idx
claude/agents/: ts-strategist.json
doc/: INSTALL_CLAUDE_CLI.md  INSTALL_CLAUDE_CODE.md  INSTALL_CLAUDE_MCP.md  MCP_API_REFERENCE.md  MCP_SERVER_ARCHITECTURE.md  ROADMAP_ANALYSIS.md  quick-start-ru.md  scenary_mcp.md  tz.md
scripts/: install_claude_agent.sh.in  quick_claude_cli_setup.sh  quick_install.sh
src/: CMakeLists.txt  main_stdio.cpp
src/core/: ASTAnalyzer.cpp  ASTAnalyzer.hpp  CMakeLists.txt  Language.cpp  Language.hpp  PathResolver.cpp  PathResolver.hpp  QueryEngine.cpp  QueryEngine.hpp  TreeSitterParser.cpp  TreeSitterParser.hpp
src/mcp/: CMakeLists.txt  ITransport.hpp  MCPServer.cpp  MCPServer.hpp  StdioTransport.cpp  StdioTransport.hpp
src/tools/: CMakeLists.txt  ExecuteQueryTool.cpp  ExecuteQueryTool.hpp  ExtractInterfaceTool.cpp  ExtractInterfaceTool.hpp  FindClassesTool.cpp  FindClassesTool.hpp  FindFunctionsTool.cpp  FindFunctionsTool.hpp  FindReferencesTool.cpp  FindReferencesTool.hpp  GetClassHierarchyTool.cpp  GetClassHierarchyTool.hpp  GetDependencyGraphTool.cpp  GetDependencyGraphTool.hpp  GetFileSummaryTool.cpp  GetFileSummaryTool.hpp  GetSymbolContextTool.cpp  GetSymbolContextTool.hpp  ParseFileTool.cpp  ParseFileTool.hpp
tests/: CMakeLists.txt
tests/core/: ASTAnalyzer_test.cpp  CMakeLists.txt  PathResolver_test.cpp  Python_test.cpp  QueryEngine_test.cpp  TreeSitterParser_test.cpp
tests/fixtures/: async_example.py  simple_class.cpp  simple_class.py  syntax_error.cpp  template_class.cpp  virtual_methods.cpp  with_decorators.py  with_imports.py  with_includes.cpp
tests/integration/: CMakeLists.txt  EndToEnd_test.cpp  test_claude_integration.sh
tests/mcp/: CMakeLists.txt  MCPServer_test.cpp  MockTransport.cpp  MockTransport.hpp
tests/tools/: CMakeLists.txt  Tools_test.cpp
